--- a/build.gradle
+++ b/build.gradle
@@ -108,10 +108,18 @@ dependencies {
 
 
     /**************** MapStruct ******************/
-    implementation "org.mapstruct:mapstruct:${mapStructVersion}"
-    annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}", "org.projectlombok:lombok:${lombokVersion}", "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindVersion}"
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'org.mapstruct:mapstruct:1.4.2.Final'
+    annotationProcessor "org.mapstruct:mapstruct-processor:1.4.2.Final"
+    // lombok 에서 mapstruct binding 해주는 기능이 추가되었습니다.!
+    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
+
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+//    implementation "org.mapstruct:mapstruct:${mapStructVersion}"
+//    annotationProcessor "org.mapstruct:mapstruct-processor:${mapStructVersion}", "org.projectlombok:lombok:${lombokVersion}", "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindVersion}"
+//
+//    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 }
 
