--- a/build.gradle
+++ b/build.gradle
@@ -95,6 +95,14 @@ dependencies {
     // Swagger
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
 
+    /**jwt */
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
+    /**spring security*/
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.5'
+
     // QueryDSL
 //    implementation group: 'com.querydsl', name: 'querydsl-jpa', version: querydslVersion
 //    implementation group: 'com.querydsl', name: 'querydsl-apt', version: querydslVersion
